@@ -1,5 +1,13 @@
 2007-07-21  Benjamin Berg  <benjamin@sipsolutions.net>
 
+	* engines/clearlooks/src/clearlooks_style.c:
+	(clearlooks_style_draw_box):
+	Remove that freaking firefox hack. We can always put something back
+	in if it turns out that it is really needed. But just having a hack
+	without knowing why it is there sucks.
+
+2007-07-21  Benjamin Berg  <benjamin@sipsolutions.net>
+
 	* themes/Clearlooks/gtk-2.0/gtkrc:
 	Use a different match for the progress bar to fix the network
 	manager progress bar padding.
